Fix: download button expanding outside container
Added `box-sizing: border-box` to `.mmw-download-link` to prevent it overflowing containers such as infobox callouts and thereby causing it to add a scrollbar to the download button.

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -136,6 +136,7 @@ a.mmw-download-link:link, a.mmw-download-link:visited {
   width: 100%;
   transition: .4s;
   padding: 6px;
+  box-sizing: border-box;
 }
 
 a.mmw-download-link:hover, a.mmw-download-link:active {
